Added /internal route
