# api/routes/internal.py
@@ -24,6 +24,20 @@ def creature_equipment():
     if isinstance(code, int):
         return jsonify({"msg": msg, "success": success, "payload": payload}), code
 
+def creature_permission():
+    if request.headers.get('Authorization') != f'Bearer {API_INTERNAL_TOKEN}':
+        return jsonify({"msg": 'Token not authorized', "success": False, "payload": None}), 403
+    if not request.is_json:
+        return jsonify({"msg": "Missing JSON in request", "success": False, "payload": None}), 400
+
+    discordname = request.json.get('discordname')
+    creatureid  = request.json.get('creatureid')
+
+    redis.incr_query_count('internal:creature:permission')
+    (code, success, msg, payload) = internal_creature_permission(creatureid,discordname)
+    if isinstance(code, int):
+        return jsonify({"msg": msg, "success": success, "payload": payload}), code
+
 def creature_stats():
     if request.headers.get('Authorization') != f'Bearer {API_INTERNAL_TOKEN}':
         return jsonify({"msg": 'Token not authorized', "success": False, "payload": None}), 403
